# basic_ml_in_rust

./: Cargo.toml  README.md
datasets/: test_labels.csv  train_labels.csv
scripts/: load_data.py
src/: file_ops.rs  main.rs  matrix2d.rs  ml.rs  shared.rs
