[package]
name = "basic_ml"
version = "0.1.0"
authors = ["Rob <rm.rf.etc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
ndarray = "0.15.3"
expm = { git = "https://github.com/SuperFluffy/rust-expm", tag = "v0.1.2" }
openblas-src = "0.10.4"